Fixed build system

--- a/scripts/read-adc/src/CMakeLists.txt
+++ b/scripts/read-adc/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SOURCES
+set(RPI_SOURCES
   "RPi.cc"
   "GPIO.cc"
   "GPIO.hh"
@@ -6,10 +6,10 @@ set(SOURCES
   "SPI.hh"
   "ads1118.hh"
 )
+
 set(CMAKE_CXX_FLAGS "-std=gnu++1y")
 
-
-add_library(rpi ${SOURCES})
+add_library(rpi ${RPI_SOURCES})
 target_include_directories(rpi PUBLIC ".")
 target_include_directories(rpi PUBLIC "../fmtlib")
 target_include_directories(rpi PUBLIC "../fmtlib/include")
@@ -20,7 +20,8 @@ install(
   TARGETS rpi
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 
 add_subdirectory("test")
+add_subdirectory("logger")
